# ModdbBot

./: .gitignore  LICENSE  README.md  moddbbot.service.template  pyproject.toml
moddb_bot/: __main__.py  logger.py  subscription.py
moddb_bot/api/models/: Author.py  Changelog.py  Comment.py  Mod.py  __init__.py
src/moddb_bot/: __main__.py  logger.py  utils.py
src/moddb_bot/api/: api.py
src/moddb_bot/api/models/: ModRelease.py  ModSide.py  ModType.py  Model.py  SortModBy.py  Tag.py
src/vintagestory-moddb-bot/: __main__.py  discord_bot.py  logger.py  subscription.py
src/vintagestory-moddb-bot/api/: __init__.py
src/vintagestory-moddb-bot/api/models/: ModScreenshot.py  ModSlim.py
test/: main.py  test_moddb_api.py  test_moddb_api_advanced.py
tests/: main.py  test_moddb_api.py  test_moddb_api_advanced.py
